# dioxus-extension

./: Cargo.toml  Dioxus.toml  build.sh  index.html  manifest_v3.json  tailwind.config.js
.devcontainer/: devcontainer.json
assets/: tailwind.css
src/: lib.rs
